Fixed menu bar width on small mobile browsers

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -198,6 +198,10 @@ div.topic textarea {
     margin: 32px auto 30px;
   }
 
+  .navbar .logo {
+    margin-right: 0;
+  }
+
   h1, .h1 {
     font-size: 28px;
   }
